--- a/_posts/2013-05-13-GTAC-2013-NOTES.markdown
+++ b/_posts/2013-05-13-GTAC-2013-NOTES.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Google Test Automation Conference 2013 Day 2"
+title:  "GTAC 2013 NOTES"
 date:   2013-05-13 22:49:00
 categories: testing automation
 ---
