--- a/_posts/2013-05-13-GTAC-2013-NOTES.markdown
+++ b/_posts/2013-05-13-GTAC-2013-NOTES.markdown
@@ -6,17 +6,17 @@ categories: GTAC
 tags: testing automation
 ---
 
-# [Google Test Automation Conference 2013](https://developers.google.com/google-test-automation-conference/2013)
+**[Google Test Automation Conference 2013](https://developers.google.com/google-test-automation-conference/2013)**
 
 
-## Day 1
+#### Day 1
 
-### Opening Keynote - Evolution from Quality Assurance to Test Engineering
+##### Opening Keynote - Evolution from Quality Assurance to Test Engineering
 *Ari Shamash* (Google)
 
 * [Slides](http://goo.gl/76Ggf)
 
-### Testing Systems at Scale @Twitter
+##### Testing Systems at Scale @Twitter
 *James Waldrop* (Twitter)
 
 * [iago][iago]
@@ -33,7 +33,7 @@ tags: testing automation
 
 * [Slides](http://goo.gl/9VY2b)
 
-### How Do You Test a Mobile OS?
+##### How Do You Test a Mobile OS?
 *David Burns* (Mozilla) and *Malini Das* (Mozilla)
 
 * [Marionette][Marionette]
@@ -42,7 +42,7 @@ tags: testing automation
 
 * [Slides](http://goo.gl/7UeEI)
 
-### Mobile Automation in Continuous Delivery Pipeline
+##### Mobile Automation in Continuous Delivery Pipeline
 *Igor Dorovskikh* (Expedia) and *Kaustubh Gawande* (Expedia)
 
 * [Jasmine][Jasmine]
@@ -52,7 +52,7 @@ tags: testing automation
 * [Jenkins][Jenkins]
 
 > Jenkins Continuous Integration Server.
-
+>
 > In a nutshell Jenkins CI is the leading open-source continuous integration server. Built with Java, it provides over 300 plugins to support building and testing virtually any project.
 
 * [Frank][Frank]
@@ -62,16 +62,17 @@ tags: testing automation
 * [Calabash][Calabash]
 
 > Calabash is an automated testing technology for Android and iOS native and hybrid applications. This repository contains support for iOS, for Android, see [Calabash Landing Page](http://calaba.sh/).
-
+>
 > Calabash is a free open source project, developed and maintained by [LessPainful - automated app testing](https://www.lesspainful.com/).
 
 * [crashlytics][crashlytics]
+
 * [PonyDebugger][PonyDebugger]
 
 > PonyDebugger is a remote debugging toolset. It is a client library and gateway server combination that uses Chrome Developer Tools on your browser to debug your application's network traffic and managed object contexts.
-
+>
 > To use PonyDebugger, you must implement the client in your application and connect it to the gateway server. There is currently an iOS client and the gateway server.
-
+>
 > PonyDebugger is licensed under [the Apache Licence, Version 2.0](http://www.apache.org/licenses/LICENSE-2.0.html).
 
 * [Radiator][Radiator]
@@ -88,17 +89,17 @@ tags: testing automation
 
 * [Slides](http://goo.gl/pOSkp)
 
-### Automated Set-Top Box Testing with GStreamer and OpenCV
+##### Automated Set-Top Box Testing with GStreamer and OpenCV
 *David Röthlisberger* (YouView)
 
 * [Video on Youtube](http://www.youtube.com/watch?v=Fdn2LxxM7wA&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
 
-### Webdriver for Chrome
+##### Webdriver for Chrome
 *Ken Kania* (Google)
 
 * [Slides](http://goo.gl/6rA9q)
 
-### Karma - Test Runner for JavaScript
+##### Karma - Test Runner for JavaScript
 *Vojta Jina* (Google)
 
 * [Karma][Karma]
@@ -107,85 +108,85 @@ tags: testing automation
 
 * [Video on Youtube](http://www.youtube.com/watch?v=YG5DEzaQBIc&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
 
-### Automated Video Quality Measurements
+##### Automated Video Quality Measurements
 *Patrik Höglund* (Google)
 
 * [Slides](http://goo.gl/sF7Fm)
 
-### When Bad Things Happen to Good Applications...
+##### When Bad Things Happen to Good Applications...
 *Minal Mishra* (Netflix)
 
 * [Slides](http://goo.gl/8epF0)
 
-### Testing for Educational Gaming and Educational Gaming for Testing
+##### Testing for Educational Gaming and Educational Gaming for Testing
 *Tao Xie* (North Carolina State University)
 
 * [Slides](http://goo.gl/wb3nm)
 
-### Closing Keynote - How Facebook Tests Facebook on Android
+##### Closing Keynote - How Facebook Tests Facebook on Android
 *Simon Stewart* (Facebook)
 
 * [Slides](http://goo.gl/278b4)
 
 
-## Day 2
+#### Day 2
 
-### Opening Keynote - Testable JavaScript - Architecting Your Application for Testability
+##### Opening Keynote - Testable JavaScript - Architecting Your Application for Testability
 *Mark Trostler* (Google)
 
 * [Slides](http://goo.gl/E1v14)
 
-### Breaking the Matrix - Android Testing at Scale
+##### Breaking the Matrix - Android Testing at Scale
 *Thomas Knych* (Google), *Stefan Ramsauer* (Google) and *Valera Zakharov* (Google)
 
 * [Slides](http://goo.gl/RltPp)
 
-### Android UI Automation
+##### Android UI Automation
 *Guang Zhu (朱光)* (Google) and *Adam Momtaz* (Google)
 
 * [Slides](http://goo.gl/kpJCL)
 
-### Appium: Automation for Mobile Apps
+##### Appium: Automation for Mobile Apps
 *Jonathan Lipps* (Sauce Labs)
 
 * [Slides](http://goo.gl/IuvKF)
 
-### Building Scalable Mobile Test Infrastructure for Google+ Mobile
+##### Building Scalable Mobile Test Infrastructure for Google+ Mobile
 *Eduardo Bravo* (Google)
 
 * [Slides](http://goo.gl/xWZKt)
 
-### Espresso: Fresh Start to Android UI Testing
+##### Espresso: Fresh Start to Android UI Testing
 *Valera Zakharov* (Google)
 
 * [Slides](http://goo.gl/ieunS)
 
-### Web Performance Testing with WebDriver
+##### Web Performance Testing with WebDriver
 *Michael Klepikov* (Google)
 
 * [Slides](http://goo.gl/5QHVY)
 
-### Continuous Maps Data Testing
+##### Continuous Maps Data Testing
 *Yvette Nameth* (Google) and *Brendan Dhein* (Google)
 
 * [Slides](http://goo.gl/UG3BN)
 
-### Finding Culprits Automatically in Failing Builds - i.e. Who Broke the Build?
+##### Finding Culprits Automatically in Failing Builds - i.e. Who Broke the Build?
 *Celal Ziftci* (UCSD) and *Vivek Ramavajjala* (Google)
 
 * [Slides](http://goo.gl/q9dGd)
 
-### Empirical Investigation of Software Product Line Quality
+##### Empirical Investigation of Software Product Line Quality
 *Katerina Goseva-Popstojanova* (West Virginia University)
 
 * [Slides](http://goo.gl/pPQ1u)
 
-### AddressSanitizer, ThreadSanitizer and MemorySanitizer -- Dynamic Testing Tools for C++
+##### AddressSanitizer, ThreadSanitizer and MemorySanitizer -- Dynamic Testing Tools for C++
 *Kostya Serebryany* (Google)
 
 * [Slides](http://goo.gl/FPVd8)
 
-### Closing Keynote - Drinking the Ocean - Finding XSS at Google Scale
+##### Closing Keynote - Drinking the Ocean - Finding XSS at Google Scale
 *Claudio Criscione* (Google)
 
 * [Slides](http://goo.gl/8qqHA)
