use an ordered list

--- a/_posts/2013-05-13-GTAC-2013-NOTES.markdown
+++ b/_posts/2013-05-13-GTAC-2013-NOTES.markdown
@@ -11,185 +11,208 @@ tags: testing automation
 
 #### Day 1
 
-##### Opening Keynote - Evolution from Quality Assurance to Test Engineering
-*Ari Shamash* (Google)
+1. ##### Opening Keynote - Evolution from Quality Assurance to Test Engineering
 
-* [Slides](http://goo.gl/76Ggf)
+    *Ari Shamash* (Google)
 
-##### Testing Systems at Scale @Twitter
-*James Waldrop* (Twitter)
+    * [Slides](http://goo.gl/76Ggf)
 
-* [iago][iago]
++ ##### Testing Systems at Scale @Twitter
 
-> A load generator, built for engineers.
+    *James Waldrop* (Twitter)
 
-* [Finagle][Finagle]
+    * [iago][iago]
 
-> Finagle is an extensible RPC system for the JVM, used to construct high-concurrency servers.
+    > A load generator, built for engineers.
 
-* [Thrift][Thrift]
+    * [Finagle][Finagle]
 
-> The Apache Thrift software framework, for scalable cross-language services development, combines a software stack with a code generation engine to build services that work efficiently and seamlessly between C++, Java, Python, PHP, Ruby, Erlang, Perl, Haskell, C#, Cocoa, JavaScript, Node.js, Smalltalk, OCaml and Delphi and other languages.
+    > Finagle is an extensible RPC system for the JVM, used to construct high-concurrency servers.
 
-* [Slides](http://goo.gl/9VY2b)
+    * [Thrift][Thrift]
 
-##### How Do You Test a Mobile OS?
-*David Burns* (Mozilla) and *Malini Das* (Mozilla)
+    > The Apache Thrift software framework, for scalable cross-language services development, combines a software stack with a code generation engine to build services that work efficiently and seamlessly between C++, Java, Python, PHP, Ruby, Erlang, Perl, Haskell, C#, Cocoa, JavaScript, Node.js, Smalltalk, OCaml and Delphi and other languages.
 
-* [Marionette][Marionette]
+    * [Slides](http://goo.gl/9VY2b)
 
-> Marionette is an automation driver.  It can remotely drive either the UI or the internal JS of a program built on the Gecko platform. Marionette runs as a server on your test machine, allowing you to connect to that server and remotely drive tests and send commands. Its goal is to replicate what selenium does for the browser: to enable the tester the ability to send commands to a remote test machine.
++ ##### How Do You Test a Mobile OS?
 
-* [Slides](http://goo.gl/7UeEI)
+    *David Burns* (Mozilla) and *Malini Das* (Mozilla)
 
-##### Mobile Automation in Continuous Delivery Pipeline
-*Igor Dorovskikh* (Expedia) and *Kaustubh Gawande* (Expedia)
+    * [Marionette][Marionette]
 
-* [Jasmine][Jasmine]
+    > Marionette is an automation driver.  It can remotely drive either the UI or the internal JS of a program built on the Gecko platform. Marionette runs as a server on your test machine, allowing you to connect to that server and remotely drive tests and send commands. Its goal is to replicate what selenium does for the browser: to enable the tester the ability to send commands to a remote test machine.
 
-> Jasmine is a Behavior Driven Development testing framework for JavaScript. It does not rely on browsers, DOM, or any JavaScript framework. Thus it's suited for websites, Node.js projects, or anywhere that JavaScript can run.
+    * [Slides](http://goo.gl/7UeEI)
 
-* [Jenkins][Jenkins]
++ ##### Mobile Automation in Continuous Delivery Pipeline
 
-> Jenkins Continuous Integration Server.
->
-> In a nutshell Jenkins CI is the leading open-source continuous integration server. Built with Java, it provides over 300 plugins to support building and testing virtually any project.
+    *Igor Dorovskikh* (Expedia) and *Kaustubh Gawande* (Expedia)
 
-* [Frank][Frank]
+    * [Jasmine][Jasmine]
 
-> Frank is 'Selenium for native iOS apps'. It allows you to write automated acceptance tests which verify the functionality of your native iOS app.
+    > Jasmine is a Behavior Driven Development testing framework for JavaScript. It does not rely on browsers, DOM, or any JavaScript framework. Thus it's suited for websites, Node.js projects, or anywhere that JavaScript can run.
 
-* [Calabash][Calabash]
+    * [Jenkins][Jenkins]
 
-> Calabash is an automated testing technology for Android and iOS native and hybrid applications. This repository contains support for iOS, for Android, see [Calabash Landing Page](http://calaba.sh/).
->
-> Calabash is a free open source project, developed and maintained by [LessPainful - automated app testing](https://www.lesspainful.com/).
+    > Jenkins Continuous Integration Server.
+    >
+    > In a nutshell Jenkins CI is the leading open-source continuous integration server. Built with Java, it provides over 300 plugins to support building and testing virtually any project.
 
-* [crashlytics][crashlytics]
+    * [Frank][Frank]
 
-* [PonyDebugger][PonyDebugger]
+    > Frank is 'Selenium for native iOS apps'. It allows you to write automated acceptance tests which verify the functionality of your native iOS app.
 
-> PonyDebugger is a remote debugging toolset. It is a client library and gateway server combination that uses Chrome Developer Tools on your browser to debug your application's network traffic and managed object contexts.
->
-> To use PonyDebugger, you must implement the client in your application and connect it to the gateway server. There is currently an iOS client and the gateway server.
->
-> PonyDebugger is licensed under [the Apache Licence, Version 2.0](http://www.apache.org/licenses/LICENSE-2.0.html).
+    * [Calabash][Calabash]
 
-* [Radiator][Radiator]
+    > Calabash is an automated testing technology for Android and iOS native and hybrid applications. This repository contains support for iOS, for Android, see [Calabash Landing Page](http://calaba.sh/).
+    >
+    > Calabash is a free open source project, developed and maintained by [LessPainful - automated app testing](https://www.lesspainful.com/).
 
-> A radiator view for hudson/jenkins
+    * [crashlytics][crashlytics]
 
-* [VCR][VCR]
+    * [PonyDebugger][PonyDebugger]
 
-> Record your test suite's HTTP interactions and replay them during future test runs for fast, deterministic, accurate tests.
+    > PonyDebugger is a remote debugging toolset. It is a client library and gateway server combination that uses Chrome Developer Tools on your browser to debug your application's network traffic and managed object contexts.
+    >
+    > To use PonyDebugger, you must implement the client in your application and connect it to the gateway server. There is currently an iOS client and the gateway server.
+    >
+    > PonyDebugger is licensed under [the Apache Licence, Version 2.0](http://www.apache.org/licenses/LICENSE-2.0.html).
 
-* [Cucumber][Cucumber]
+    * [Radiator][Radiator]
 
-> Cucumber is a tool for running automated tests written in plain language. Because they're written in plain language, they can be read by anyone on your team. Because they can be read by anyone, you can use them to help improve communication, collaboration and trust on your team.
+    > A radiator view for hudson/jenkins
 
-* [Slides](http://goo.gl/pOSkp)
+    * [VCR][VCR]
 
-##### Automated Set-Top Box Testing with GStreamer and OpenCV
-*David Röthlisberger* (YouView)
+    > Record your test suite's HTTP interactions and replay them during future test runs for fast, deterministic, accurate tests.
 
-* [Video on Youtube](http://www.youtube.com/watch?v=Fdn2LxxM7wA&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
+    * [Cucumber][Cucumber]
 
-##### Webdriver for Chrome
-*Ken Kania* (Google)
+    > Cucumber is a tool for running automated tests written in plain language. Because they're written in plain language, they can be read by anyone on your team. Because they can be read by anyone, you can use them to help improve communication, collaboration and trust on your team.
 
-* [Slides](http://goo.gl/6rA9q)
+    * [Slides](http://goo.gl/pOSkp)
 
-##### Karma - Test Runner for JavaScript
-*Vojta Jina* (Google)
++ ##### Automated Set-Top Box Testing with GStreamer and OpenCV
 
-* [Karma][Karma]
+    *David Röthlisberger* (YouView)
 
-> A simple tool that allows you to execute JavaScript code in multiple real browsers, powered by Node.js and Socket.io.
+    * [Video on Youtube](http://www.youtube.com/watch?v=Fdn2LxxM7wA&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
 
-* [Video on Youtube](http://www.youtube.com/watch?v=YG5DEzaQBIc&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
++ ##### Webdriver for Chrome
 
-##### Automated Video Quality Measurements
-*Patrik Höglund* (Google)
+    *Ken Kania* (Google)
 
-* [Slides](http://goo.gl/sF7Fm)
+    * [Slides](http://goo.gl/6rA9q)
 
-##### When Bad Things Happen to Good Applications...
-*Minal Mishra* (Netflix)
++ ##### Karma - Test Runner for JavaScript
 
-* [Slides](http://goo.gl/8epF0)
+    *Vojta Jina* (Google)
 
-##### Testing for Educational Gaming and Educational Gaming for Testing
-*Tao Xie* (North Carolina State University)
+    * [Karma][Karma]
 
-* [Slides](http://goo.gl/wb3nm)
+    > A simple tool that allows you to execute JavaScript code in multiple real browsers, powered by Node.js and Socket.io.
 
-##### Closing Keynote - How Facebook Tests Facebook on Android
-*Simon Stewart* (Facebook)
+    * [Video on Youtube](http://www.youtube.com/watch?v=YG5DEzaQBIc&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
 
-* [Slides](http://goo.gl/278b4)
++ ##### Automated Video Quality Measurements
+
+    *Patrik Höglund* (Google)
+
+    * [Slides](http://goo.gl/sF7Fm)
+
++ ##### When Bad Things Happen to Good Applications...
+
+    *Minal Mishra* (Netflix)
+
+    * [Slides](http://goo.gl/8epF0)
+
++ ##### Testing for Educational Gaming and Educational Gaming for Testing
+
+    *Tao Xie* (North Carolina State University)
+
+    * [Slides](http://goo.gl/wb3nm)
+
++ ##### Closing Keynote - How Facebook Tests Facebook on Android
+
+    *Simon Stewart* (Facebook)
+
+    * [Slides](http://goo.gl/278b4)
 
 
 #### Day 2
 
-##### Opening Keynote - Testable JavaScript - Architecting Your Application for Testability
-*Mark Trostler* (Google)
+1. ##### Opening Keynote - Testable JavaScript - Architecting Your Application for Testability
 
-* [Slides](http://goo.gl/E1v14)
+    *Mark Trostler* (Google)
 
-##### Breaking the Matrix - Android Testing at Scale
-*Thomas Knych* (Google), *Stefan Ramsauer* (Google) and *Valera Zakharov* (Google)
+    * [Slides](http://goo.gl/E1v14)
 
-* [Slides](http://goo.gl/RltPp)
++ ##### Breaking the Matrix - Android Testing at Scale
 
-##### Android UI Automation
-*Guang Zhu (朱光)* (Google) and *Adam Momtaz* (Google)
+    *Thomas Knych* (Google), *Stefan Ramsauer* (Google) and *Valera Zakharov* (Google)
 
-* [Slides](http://goo.gl/kpJCL)
+    * [Slides](http://goo.gl/RltPp)
 
-##### Appium: Automation for Mobile Apps
-*Jonathan Lipps* (Sauce Labs)
++ ##### Android UI Automation
 
-* [Slides](http://goo.gl/IuvKF)
+    *Guang Zhu (朱光)* (Google) and *Adam Momtaz* (Google)
 
-##### Building Scalable Mobile Test Infrastructure for Google+ Mobile
-*Eduardo Bravo* (Google)
+    * [Slides](http://goo.gl/kpJCL)
 
-* [Slides](http://goo.gl/xWZKt)
++ ##### Appium: Automation for Mobile Apps
 
-##### Espresso: Fresh Start to Android UI Testing
-*Valera Zakharov* (Google)
+    *Jonathan Lipps* (Sauce Labs)
 
-* [Slides](http://goo.gl/ieunS)
+    * [Slides](http://goo.gl/IuvKF)
 
-##### Web Performance Testing with WebDriver
-*Michael Klepikov* (Google)
++ ##### Building Scalable Mobile Test Infrastructure for Google+ Mobile
 
-* [Slides](http://goo.gl/5QHVY)
+    *Eduardo Bravo* (Google)
 
-##### Continuous Maps Data Testing
-*Yvette Nameth* (Google) and *Brendan Dhein* (Google)
+    * [Slides](http://goo.gl/xWZKt)
 
-* [Slides](http://goo.gl/UG3BN)
++ ##### Espresso: Fresh Start to Android UI Testing
 
-##### Finding Culprits Automatically in Failing Builds - i.e. Who Broke the Build?
-*Celal Ziftci* (UCSD) and *Vivek Ramavajjala* (Google)
+    *Valera Zakharov* (Google)
 
-* [Slides](http://goo.gl/q9dGd)
+    * [Slides](http://goo.gl/ieunS)
 
-##### Empirical Investigation of Software Product Line Quality
-*Katerina Goseva-Popstojanova* (West Virginia University)
++ ##### Web Performance Testing with WebDriver
 
-* [Slides](http://goo.gl/pPQ1u)
+    *Michael Klepikov* (Google)
 
-##### AddressSanitizer, ThreadSanitizer and MemorySanitizer -- Dynamic Testing Tools for C++
-*Kostya Serebryany* (Google)
+    * [Slides](http://goo.gl/5QHVY)
 
-* [Slides](http://goo.gl/FPVd8)
++ ##### Continuous Maps Data Testing
 
-##### Closing Keynote - Drinking the Ocean - Finding XSS at Google Scale
-*Claudio Criscione* (Google)
+    *Yvette Nameth* (Google) and *Brendan Dhein* (Google)
 
-* [Slides](http://goo.gl/8qqHA)
+    * [Slides](http://goo.gl/UG3BN)
+
++ ##### Finding Culprits Automatically in Failing Builds - i.e. Who Broke the Build?
+
+    *Celal Ziftci* (UCSD) and *Vivek Ramavajjala* (Google)
+
+    * [Slides](http://goo.gl/q9dGd)
+
++ ##### Empirical Investigation of Software Product Line Quality
+
+    *Katerina Goseva-Popstojanova* (West Virginia University)
+
+    * [Slides](http://goo.gl/pPQ1u)
+
++ ##### AddressSanitizer, ThreadSanitizer and MemorySanitizer -- Dynamic Testing Tools for C++
+
+    *Kostya Serebryany* (Google)
+
+    * [Slides](http://goo.gl/FPVd8)
+
++ ##### Closing Keynote - Drinking the Ocean - Finding XSS at Google Scale
+
+    *Claudio Criscione* (Google)
+
+    * [Slides](http://goo.gl/8qqHA)
 
 [iago]: https://github.com/twitter/iago
 [Finagle]: https://github.com/twitter/finagle
