use an ordered list

--- a/_posts/2013-05-13-GTAC-2013-NOTES.markdown
+++ b/_posts/2013-05-13-GTAC-2013-NOTES.markdown
@@ -17,7 +17,7 @@ tags: testing automation
 
     * [Slides](http://goo.gl/76Ggf)
 
-+ ##### Testing Systems at Scale @Twitter
+2. ##### Testing Systems at Scale @Twitter
 
     *James Waldrop* (Twitter)
 
@@ -35,7 +35,7 @@ tags: testing automation
 
     * [Slides](http://goo.gl/9VY2b)
 
-+ ##### How Do You Test a Mobile OS?
+3. ##### How Do You Test a Mobile OS?
 
     *David Burns* (Mozilla) and *Malini Das* (Mozilla)
 
@@ -45,7 +45,7 @@ tags: testing automation
 
     * [Slides](http://goo.gl/7UeEI)
 
-+ ##### Mobile Automation in Continuous Delivery Pipeline
+4. ##### Mobile Automation in Continuous Delivery Pipeline
 
     *Igor Dorovskikh* (Expedia) and *Kaustubh Gawande* (Expedia)
 
@@ -93,19 +93,19 @@ tags: testing automation
 
     * [Slides](http://goo.gl/pOSkp)
 
-+ ##### Automated Set-Top Box Testing with GStreamer and OpenCV
+5. ##### Automated Set-Top Box Testing with GStreamer and OpenCV
 
     *David Röthlisberger* (YouView)
 
     * [Video on Youtube](http://www.youtube.com/watch?v=Fdn2LxxM7wA&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
 
-+ ##### Webdriver for Chrome
+6. ##### Webdriver for Chrome
 
     *Ken Kania* (Google)
 
     * [Slides](http://goo.gl/6rA9q)
 
-+ ##### Karma - Test Runner for JavaScript
+7. ##### Karma - Test Runner for JavaScript
 
     *Vojta Jina* (Google)
 
@@ -115,25 +115,25 @@ tags: testing automation
 
     * [Video on Youtube](http://www.youtube.com/watch?v=YG5DEzaQBIc&list=SPSIUOFhnxEiCODb8XQB-RUQ0RGNZ2yW7d)
 
-+ ##### Automated Video Quality Measurements
+8. ##### Automated Video Quality Measurements
 
     *Patrik Höglund* (Google)
 
     * [Slides](http://goo.gl/sF7Fm)
 
-+ ##### When Bad Things Happen to Good Applications...
+9. ##### When Bad Things Happen to Good Applications...
 
     *Minal Mishra* (Netflix)
 
     * [Slides](http://goo.gl/8epF0)
 
-+ ##### Testing for Educational Gaming and Educational Gaming for Testing
+10. ##### Testing for Educational Gaming and Educational Gaming for Testing
 
     *Tao Xie* (North Carolina State University)
 
     * [Slides](http://goo.gl/wb3nm)
 
-+ ##### Closing Keynote - How Facebook Tests Facebook on Android
+11. ##### Closing Keynote - How Facebook Tests Facebook on Android
 
     *Simon Stewart* (Facebook)
 
@@ -148,67 +148,67 @@ tags: testing automation
 
     * [Slides](http://goo.gl/E1v14)
 
-+ ##### Breaking the Matrix - Android Testing at Scale
+2. ##### Breaking the Matrix - Android Testing at Scale
 
     *Thomas Knych* (Google), *Stefan Ramsauer* (Google) and *Valera Zakharov* (Google)
 
     * [Slides](http://goo.gl/RltPp)
 
-+ ##### Android UI Automation
+3. ##### Android UI Automation
 
     *Guang Zhu (朱光)* (Google) and *Adam Momtaz* (Google)
 
     * [Slides](http://goo.gl/kpJCL)
 
-+ ##### Appium: Automation for Mobile Apps
+4. ##### Appium: Automation for Mobile Apps
 
     *Jonathan Lipps* (Sauce Labs)
 
     * [Slides](http://goo.gl/IuvKF)
 
-+ ##### Building Scalable Mobile Test Infrastructure for Google+ Mobile
+5. ##### Building Scalable Mobile Test Infrastructure for Google+ Mobile
 
     *Eduardo Bravo* (Google)
 
     * [Slides](http://goo.gl/xWZKt)
 
-+ ##### Espresso: Fresh Start to Android UI Testing
+6. ##### Espresso: Fresh Start to Android UI Testing
 
     *Valera Zakharov* (Google)
 
     * [Slides](http://goo.gl/ieunS)
 
-+ ##### Web Performance Testing with WebDriver
+7. ##### Web Performance Testing with WebDriver
 
     *Michael Klepikov* (Google)
 
     * [Slides](http://goo.gl/5QHVY)
 
-+ ##### Continuous Maps Data Testing
+8. ##### Continuous Maps Data Testing
 
     *Yvette Nameth* (Google) and *Brendan Dhein* (Google)
 
     * [Slides](http://goo.gl/UG3BN)
 
-+ ##### Finding Culprits Automatically in Failing Builds - i.e. Who Broke the Build?
+9. ##### Finding Culprits Automatically in Failing Builds - i.e. Who Broke the Build?
 
     *Celal Ziftci* (UCSD) and *Vivek Ramavajjala* (Google)
 
     * [Slides](http://goo.gl/q9dGd)
 
-+ ##### Empirical Investigation of Software Product Line Quality
+10. ##### Empirical Investigation of Software Product Line Quality
 
     *Katerina Goseva-Popstojanova* (West Virginia University)
 
     * [Slides](http://goo.gl/pPQ1u)
 
-+ ##### AddressSanitizer, ThreadSanitizer and MemorySanitizer -- Dynamic Testing Tools for C++
+11. ##### AddressSanitizer, ThreadSanitizer and MemorySanitizer -- Dynamic Testing Tools for C++
 
     *Kostya Serebryany* (Google)
 
     * [Slides](http://goo.gl/FPVd8)
 
-+ ##### Closing Keynote - Drinking the Ocean - Finding XSS at Google Scale
+12. ##### Closing Keynote - Drinking the Ocean - Finding XSS at Google Scale
 
     *Claudio Criscione* (Google)
 
