--- a/_posts/2013-05-13-GTAC-2013-NOTES-1.markdown
+++ b/_posts/2013-05-13-GTAC-2013-NOTES-1.markdown
@@ -3,7 +3,9 @@ layout: post
 title:  "GTAC 2013 NOTE of Day 1"
 date:   2013-05-13 22:49:00
 categories: GTAC
-tags: testing automation
+tags:
+    -testing
+    -automation
 ---
 
 **[Google Test Automation Conference 2013](https://developers.google.com/google-test-automation-conference/2013)**
